--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,18 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+ body {
+  padding: 0px;
+  margin: 0px;
+ }
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
 
 html {
-  color: #222;
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 150, 180);  
   font-size: 1em;
   line-height: 1.4;
 }
@@ -64,6 +70,47 @@ svg,
 video {
   vertical-align: middle;
 }
+
+
+.background-top {
+  background-color: #000;
+  width: 100%;
+  height: 40px;
+}
+
+.background {
+  position: relative;
+  text-align: center;
+  vertical-align: top;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.text {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 50px;
+}
+
+
+
+.navbot {
+  display: inline-block;
+  text-align: center;
+}
+
+.link {
+  float: left;
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+
+
+
+
 
 /*
  * Remove default fieldset styles.
@@ -263,4 +310,6 @@ textarea {
     page-break-after: avoid;
   }
 }
+
+
 
